tests/snapshots/motion_edge_cases_test__l_at_end_of_line.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 1

Buffer:
hell[o]
