tests/snapshots/motion_edge_cases_test__line_number_exceeds_buffer.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 998:0
Lines: 3

Buffer:
line 1
line 2
line 3
