tests/snapshots/motion_edge_cases_test__line_number_jump.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 5

Buffer:
line 1
line 2
[l]ine 3
line 4
line 5
