tests/snapshots/motion_edge_cases_test__multiple_consecutive_empty_lines.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 5

Buffer:
hello

[ ]

world
