tests/snapshots/motion_edge_cases_test__t_last_char.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:9
Lines: 1

Buffer:
hello wor[l]d
