tests/snapshots/motion_edge_cases_test__w_at_last_word.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:10
Lines: 1

Buffer:
hello worl[d]
