tests/snapshots/motion_edge_cases_test__w_motion.snap
---
source: tests/motion_edge_cases_test.rs
expression: test_W.snapshot_state()
---
Mode: Normal
Cursor: 0:12
Lines: 1

Buffer:
hello.world [t]est
