tests/snapshots/motion_edge_cases_test__w_on_empty_line.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 3

Buffer:
hello

[w]orld
